--- a/certificationreg.html
+++ b/certificationreg.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <head>
-
+   <title>Запись на аттестацию</title>
    <meta charset="utf-8">
    <meta name='viewport' content='width=device-width,initial-scale=1'/>
-   <title>Запись на аттестацию</title>
-
 </head>
 
 <body>
  <header>
     <a href="index.html"><img src="images\logo.png" alt="Логотип"></a>
+	<h1>Программные технологии Интернета</h1>
  </header>
 
  <nav>
@@ -23,7 +22,6 @@
   </ul>
  </nav>
 
- <h1>О себе</h1>
 
 <form>
    <label for="surname">Фамилия</label>
@@ -70,7 +68,8 @@
 
 
 
- <footer>    
+ <footer> 
+    <p>Сайт разработан ФИ, Copyright ©2023</p> 
 	<img src="images\socialmedia1.png" 
 	    width="60"
         height="60"
@@ -84,7 +83,6 @@
 	    width="60"
         height="60"
     	alt="СоцМедиа3">
-	<p>Сайт разработан ФИ, Copyright ©2023</p>
  </footer>
 
 </body>
