--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <head>
-
+   <title>Главная</title>
    <meta charset="utf-8">
    <meta name='viewport' content='width=device-width,initial-scale=1'/>
-   <title>Главная</title>
-
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
  <header>
     <a href="index.html"><img src="images\logo.png" alt="Логотип"></a>
+	<h1>Программные технологии Интернета</h1>
+
  </header>
 
- <nav>
-  <ul>
-    <li><a href="index.html">О себе</a></li>
-    <li><a href="resume.html">Резюме</a></li>
-    <li><a href="certificationreg.html">Запись на аттестацию</a></li>
- <!--   <li><a href="portfolio.html">Портфолио</a></li>
-    <li><a href="competencies.html">Компетенции</a></li>
-    <li><a href="contacts.html">Контакты</a></li> !-->
-  </ul>
- </nav>
 
- <h1>О себе</h1>
+ <div class="navig-container">
+	<div class="navig"><a href="index.html">О себе</a> </div>
+    <div class="navig"><a href="resume.html">Резюме</a> </div>
+    <div class="navig"><a href="certificationreg.html">Запись на аттестацию</a> </div>
+ </div>
 
-  <p>Нужная И.А.</p>
-  <p>ПРОГ-С-19.</p>
-  <img src="images\photo.png"
-	    width="1000"
-        height="666"
+<div class="div-3">
+<div class="div-1">
+    <img src="images\photo.png"
+	    width="500"
+        height="333"
 		alt="СоцМедиа2">
-  <p><a href="https://www.uni-dubna.ru/">Государственный университет «Дубна»</a></p>
-  <p>Современные веб-технологии предоставляют разработчикам неограниченные возможности для реализации своих идей. Для того, чтобы вы могли использовать весь их потенциал, необходимо знать как правильно их использовать. На этой странице мы постарались собрать ссылки на документацию по различным технологиям, которые могут быть вам полезны.</p>
-
- <footer>    
-	<img src="images\socialmedia1.png" 
+  <h2>Нужная И.А.</h2>
+  <h2>ПРОГ-С-19.</h2>
+  <h2><a href="https://www.uni-dubna.ru/">Государственный университет «Дубна»</a></h2>
+  
+</div>
+  <div class="div-2"><p>Современные веб-технологии предоставляют разработчикам неограниченные возможности для реализации своих идей. Для того, чтобы вы могли использовать весь их потенциал, необходимо знать как правильно их использовать. На этой странице мы постарались собрать ссылки на документацию по различным технологиям, которые могут быть вам полезны.</p></div>
+</div>
+ <footer> 
+    <p>Сайт разработан ФИ, Copyright ©2023</p> 
+	<div class="footer-img"><img src="images\socialmedia1.png" 
 	    width="60"
         height="60"
 	    alt="СоцМедиа1">   
@@ -47,8 +47,7 @@
 	<img src="images\socialmedia3.png"
 	    width="60"
         height="60"
-    	alt="СоцМедиа3">
-	<p>Сайт разработан ФИ, Copyright ©2023</p>
+    	alt="СоцМедиа3"></div>
  </footer>
 
 </body>
