--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,8 @@
  <div class="navig-container">
 	<div class="navig"><a href="index.html">О себе</a> </div>
     <div class="navig"><a href="resume.html">Резюме</a> </div>
-    <div class="navig"><a href="certificationreg.html">Запись на аттестацию</a> </div>
+    <div class="navig"><a href="certificationreg.php">Запись на аттестацию</a> </div>
+	<div class="navig"><a href="login.html">Войти или зарегистрироваться</a> </div>
  </div>
 
 <div class="div-3">
